# saynow

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: development.md  self-learning-engine.md
docs/design/: prd.md  technical-design.md
docs/superpowers/plans/: 2026-06-02-voice-input-assistant.md
src/: App.vue  RecorderOverlay.vue  main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  db.rs  learning.rs  lib.rs  main.rs  models.rs  platform.rs  prompt.rs  provider.rs  runtime_log.rs  stats.rs
src/api/: tauri.ts
src/api/__tests__/: tauri.test.ts
src/components/: AppIcon.vue  AppShell.vue  EmptyState.vue  MetricCard.vue  PageHeader.vue  StatusBadge.vue  UiPanel.vue
src/domain/: audioRecorder.ts  hotkeyRecorder.ts  promptContext.ts  recorderOverlayPosition.ts  stats.ts
src/domain/__tests__/: hotkeyRecorder.test.ts  promptContext.test.ts  recorderOverlayPosition.test.ts  stats.test.ts
src/pages/: ConfigPage.vue  DataPage.vue  FeedbackPage.vue  HomePage.vue  PersonalizationPage.vue
