[package]
name = "voice-input-assistant"
version = "0.1.0"
description = "Windows voice input assistant"
authors = ["voice-input-assistant"]
edition = "2021"

[lib]
name = "voice_input_assistant"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = [], optional = true }
thiserror = "2.0.17"

[features]
default = []
desktop = ["tauri"]
