[package]
name = "saynow"
version = "0.1.17"
description = "saynow Windows speech recognition tool"
authors = ["saynow"]
edition = "2021"

[lib]
name = "voice_input_assistant"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = ["tray-icon"], optional = true }
thiserror = "2.0.17"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[features]
default = ["desktop"]
desktop = ["tauri"]
